working! - fix alignment issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+
 .container {
-  
+  padding: 20px;
+  display: flex;
+  background-color: #2b2b2b;
+  min-height: 100vh;
+  min-width: 100vw;
 }
+
